--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -30,7 +30,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-md-4">
-                            <img class="img-thumbnail" src="{{ post.imagepost.url }}" alt="img">
+                            <img class="img-thumbnail" src="{{ post.imagepost.url }}" alt="garbage.jpg">
                         </div>
                         <div class="col-md-8">
                             <p>
